<resources>
    <string name="dk_app_name">多酷游戏</string>
    <string name="dk_find_wd"><u>找回密码</u></string>
    <string name="dk_remember_login_state">记住登录状态</string>
    <string name="dk_account">账号（手机号/用户名）</string>
    <string name="dk_password">密码</string>
    <string name="dk_login">登录</string>
    <string name="dk_bind_success">绑定成功</string>
    <string name="dk_username_register">用户名注册</string>
    <string name="dk_free_register">免费注册</string>
    <string name="dk_login_with_baidu_account">使用百度账号登录</string>
    <string name="dk_login_with_duoku_account">百度多酷用户登录</string>
    <string name="dk_userregister_progress">信息提交中，请稍候！</string>
    <string name="dk_user_register_nameerror">请输入正确的用户名（4-14位字母或数字）</string>
    <string name="dk_user_pwd_null">密码不能为空！</string>
    <string name="dk_user_pwd_error">密码输入不符合规范，请重新输入！</string>
    <string name="dk_userlogin_progress">登录中...</string>
    <string name="dk_user_register_process">正在注册...</string>
    <string name="dk_user_login_sucess">登录成功</string>
    <string name="dk_user_cancle_login">用户取消登录</string>
    <string name="dk_user_request_error">%s , 请稍候重试！</string>
    <string name="dk_user_requesterror_net_timeout">网络超时，请稍候重试！</string>
    <string name="dk_user_requesterror_server_dead">网络异常，请稍后重试!</string>
    <string name="dk_user_requesterror_net_dead">网络异常，请稍后重试!</string>
    <string name="dk_user_login_usernotexist">请输入正确的用户名或手机号！</string>
    <string name="dk_user_login_pwderror">请输入正确的密码！</string>
    <string name="dk_user_loginbaidu_namepwd_null">用户名，密码不能为空！</string>
    <string name="dk_user_register_licence_hint_ok">注册前请先同意《注册协议》！</string>
    <string name="dk_user_register_phonenum">您输入的用户名可能为手机号，请使用手机一键注册！</string>
    <string name="dk_user_register_success">注册请求已发送，请查收短信！</string>
    <string name="dk_user_register_fail1">注册失败！请确保网络连接正常！</string>
    <string name="dk_user_register_fail2">注册失败！请确保手机卡通信正常！</string>
    <string name="dk_userregister_phonenum_progress">手机号码注册中，请稍候！</string>
    <string name="dk_confirm">确定</string>
    <string name="dk_cancel">取消</string>
    <string name="dk_userregister_success_1">注册成功！</string>
    <string name="dk_user_register_name_exit">用户名已存在！</string>
    <string name="dk_user_request_fail">请求失败，请稍候重试！</string>
    <string name="dk_text_register_licence">注册服务协议</string>
    <string name="dk_userlogin_forgetpwd_confirm_nobind">拨打客服找回</string>
    <string name="dk_userlogin_findpsw_by_service">请通过拨打客服电话</string>
    <string name="dk_userlogin_find_psw">找回密码</string>
    <string name="dk_userlogin_forgetpwd_confirm">找回密码</string>
    <string name="dk_user_login_name_null">账号不能为空！</string>
    <string name="dk_user_thirdparty_login_failure">登录失败，请稍后再试！</string>
    <string name="dk_user_welcome_back_info">欢迎你回来！</string>
    <string name="dk_user_welcome_add_info">欢迎你加入！</string>
    <string name="dk_logining">正在登录...</string>
     <string name="dk_finding">正在查找...</string>
    <string name="dk_thirdparty_login_failure">网络异常，请稍后重试!</string>
    <string name="dk_bdlogin_error_tip_inputusername">请输入用户名！</string>
    <string name="dk_bdlgoin_error_tip_inputpassword">请输入密码！</string>
    <string name="dk_bdlogin_error_tip_inputverifycode">请输入验证码！</string>
    <string name="dk_message_header">"已下发短信到您的手机"</string>
    <string name="dk_message_footer">"回复短信即可找回密码"</string>
    <string name="dk_account_error">请输入正确的用户名/手机号！</string>
    <string name="dk_account_null">请输入账号</string>
    <string name="dk_pwd_error">请输入6-16位字母或数字!</string>
    <string name="dk_pwd_null">请输入密码!</string>
    <string name="dk_verifycode_error">验证码错误，请重新输入！</string>
    <string name="dk_verifycode_null">请输入验证码！</string>
    <string name="dk_username_error">请输入4-14位字母或数字!</string>
    <string name="dk_username_null">请输入用户名或手机号！</string>
    <string name="dk_username_cover">用户名已被人抢注了，我们猜您可能也喜欢:</string>
    <string name="dk_username_digit_11">用户名不支持11位首字母为1的纯数字,请重新输入</string>
    <string name="dk_password_rule_error">请输入符合要求的密码，6-16位字母或数字！</string>
    <string name="dk_password_null">请输入密码！</string>
    <string name="dk_null_check">注册前请先同意《注册服务协议》！</string>
    <string name="dk_pre_pwd_error">请输入正确的原密码!</string>
    <string name="dk_pre_pwd_null">请输入原密码!</string>
    <string name="dk_new_pwd_rule_error">请输入6-16位字母或数字的新密码！</string>
    <string name="dk_new_pwd_null">请输入新密码!</string>
    <string name="dk_check_pwd_null">请输入确认新密码！</string>
    <string name="dk_new_pwd_check_error">请检查两次新密码输入是否一致！</string>
    <string name="dk_phonenum_rule_error">请输入真实的手机号码!</string>
    <string name="dk_phonenum_null">请输入手机号！</string>
    <string name="dk_phonenum_had_bind">该手机号码已绑定，请输入其他手机号码!</string>
    <string name="dk_modify_nickname_interval_less_15days">距离上次修改还不足十五天哦！</string>
    <string name="dk_bdpwd_error">请输入正确的密码！</string>
    <string name="dk_bdverifycode_error">获取验证码失败，请重试！</string>
    <string name="dk_username_or_pwd_error">用户名或密码错误，请重试！</string>
    <string name="dk_login_failed_and_try_later">登录失败，请稍候重试!</string>
    <string name="dk_xinlang_weibo_progress_info">请稍候</string>
    <string name="dk_baidu_account_error">请输入正确的用户名！</string>
    <string name="dk_str_tip_modify_pass">修改密码请求已经提交，请稍候！</string>
    <string name="dk_str_tip_bind_phone">绑定手机请求已经提交，请稍候！</string>
    <string name="dk_account_baidu_nobind_modify_tip">您当前为百度账号登录，请先绑定手机后激活修改密码功能！</string>
    <string name="dk_account_sina_nobind_modify_tip">您当前为新浪账号登录，请先绑定手机后激活修改密码功能！</string>
    <string name="dk_phone_send_textmsg_default">↑将用您的手机发送验证信息</string>
    <string name="dk_phone_send_msg_nosimcard">抱歉，您还没有手机号，请插入SIM卡！</string>
    <string name="dk_phone_send_msg_noNetwork">网络异常，请稍候重试！</string>
    <string name="dk_phone_send_msg_cannotsendsms">手机注册失败，推荐使用用户名注册哦~</string>
    <string name="dk_phone_send_login_success">登录成功</string>
    <string name="dk_sms_cmcc">1065750204886666</string>
    <string name="dk_sms_cucc">106550200096386</string>
    <string name="dk_sms_ctcc">1069032963386</string>
    <string name="dk_sms_all">1069033312388</string>
    <string name="dk_sms_strategy">0</string>
    <string name="dk_user_login_dialog_msg_line1">检测到您已经存在账号</string>
    <string name="dk_user_login_dialog_msg_line2">要注册新账号吗？</string>
    <string name="dk_user_login_dialog_msg_btn_blue">返回登录</string>
    <string name="dk_user_login_dialog_msg_btn_orange">注册新账号</string>
    <string name="dk_user_auto_login_dialog_msg_duoku">多酷账号</string>
    <string name="dk_user_auto_login_dialog_msg_progress">正在登录中...</string>
    <string name="dk_user_auto_login_dialog_msg_btn">切换账号</string>
    <string name="dk_user_auto_login_dialog_msg_baidu">百度账号</string>
    <string name="dk_user_auto_login_dialog_msg_sina">新浪账号</string>
    <string name="dk_ten_bargainor_id">1212774301</string>
    <string name="dk_ten_card">财付通</string>
    <string name="dk_deposit_card">银行卡</string>
    <string name="dk_recharge">充值</string>
    <string name="dk_tokenid_failed">服务器繁忙，请稍后重试</string>
    <string name="dk_draw_times">抽奖次数  </string>
    <string name="dk_times">次</string>
    <string name="dk_draw_prize">中奖情况</string>
    <string name="dk_draw_desc">点击抽奖有惊喜</string>
    <string name="dk_draw_desc_2">亲 没有中奖哦</string>
    <string name="dk_draw_press">点击抽奖</string>
    <string name="dk_draw_return">返回</string>
    <string name="dk_draw_yuan">元</string>
    <string name="dk_pay_info_return">返回游戏</string>
    <string name="dk_pay_info_draw">抽奖</string>
    <string name="dk_pay_info_text_success">支付成功！</string>
    <string name="dk_pay_info_text_fail">支付失败！</string>
    <string name="dk_draw_winner_zhong">中奖</string>
    <string name="dk_draw_winner_yuanjiangmingdan">元名单:</string>
    <string name="dk_draw_late_info">加载奖品信息繁忙，系统将为您累计一次抽奖机会，下次充值时使用。</string>
    <string name="dk_draw_text">\t\t</string>
    <string name="dk_draw_text2">\t\t</string>
    <string name="dk_draw_land_text">\t\t</string>
    <string name="dk_draw_land_text2">\t\t</string>
    <string name="dk_draw_prizes">200</string>
    <string name="dk_tenpay_name">财付通支付</string>
    <string name="dk_tenpay_btn">支付</string>
    <string name="dk_login_ing">登录中...</string>
    <string name="dk_login_success">登录成功</string>
    <string name="dk_register_username_hint">用户名&#160;&#160;(4-14个字母或数字)</string>
    <string name="dk_register_pwd_hint">密　码&#160;&#160;(6-16个字母或数字)</string>
    <string name="dk_register_agreement_hint">同意</string>
    <string name="dk_register_licence">《注册协议》</string>
    <string name="dk_btn_string_exchange_account">切换账号</string>
    <string name="dk_btn_string_bind_phone">绑定手机</string>
    <string name="dk_btn_string_modify_phone">修改绑定</string>
    <string name="dk_btn_string_modify_pwd">修改密码</string>
    <string name="dk_show_passord">显示密码</string>
    <string name="dk_tv_string_charge_history">充值记录</string>
    <string name="dk_tv_string_account_history">查看充值记录</string>
    <string name="dk_btn_string_get_verify_code">获取验证码</string>
    <string name="dk_tv_string_verifycode">验证码</string>
    <string name="dk_et_string_verifycode_hint">请输入验证码</string>
    <string name="dk_btn_commit">提交</string>
    <string name="dk_tv_string_account_no_bind">绑定后账号更安全</string>
    <string name="dk_tv_string_cur_bind_phone">您目前绑定的手机号码:</string>
    <string name="dk_tv_string_pre_bind_phone">原手机号</string>
    <string name="dk_btn_next_step">下一步</string>
    <string name="dk_tv_string_new_phone">新手机号</string>
    <string name="dk_btn_string_complete">完成</string>
    <string name="dk_tv_string_pre_pwd">原密码：6-16位字母或数字</string>
    <string name="dk_tv_pre_pwd_input">请输入原密码</string>
    <string name="dk_et_string_pwd_rule">6-16位字母或数字</string>
    <string name="dk_tv_string_new_pwd">新密码：6-16位字母或数字 </string>
    <string name="dk_tv_string_confire_new_pwd">确认新密码</string>
    <string name="dk_btn_string_confire_modify_pwd">确认修改</string>
    <string name="dk_tv_string_loading">加载中...</string>
    <string name="dk_tv_string_account_input">请输入您的账号</string>
    <string name="dk_et_string_account_or_phone">用户名或手机号</string>
    <string name="dk_tv_string_login_with_bd_account">百度账号登录</string>
    <string name="dk_btn_string_change_verify_code">换一张</string>
    <string name="dk_tv_string_register_service_lease">多酷注册服务协议</string>
    <string name="dk_btn_string_i_know">我知道了</string>
    <string name="dk_tv_string_req_bind_msg">您尚未绑定手机，忘记密码时将无法通过手机找回密码！</string>
    <string name="dk_tv_string_req_bind_msg_2">绑定手机后可以找回密码，账号、付费更安全！</string>
    <string name="dk_btn_string_bind_now">立即绑定</string>
    <string name="dk_btn_string_bind_later">以后再说</string>
    <string name="dk_tv_string_tip">温馨提示：</string>
    <string name="dk_tv_find_psw_prompt">未绑定手机号码的用户,请联系客服人工找回</string>
    <string name="dk_tv_string_req_bind_phone_tip_1">1、手机号码仅作为账户凭证，不会收取任何费用。</string>
    <string name="dk_tv_string_req_bind_phone_tip_2">2、我们承诺保障您的隐私权益，不会泄漏您的手机号码。</string>
    <string name="dk_loading">正在登录</string>
    <string name="dk_find_pwd_hint">&#160;用户名&#160;&#160; (4-14个字母或数字) </string>
    <string name="dk_welcome_to_reg_duoku">欢迎注册多酷账号</string>
    <string name="dk_account_text">账号</string>
    <string name="dk_account_title">账号管理</string>
    <string name="dk_register_now">立即注册</string>
    <string name="dk_register_phone">手机号一键注册</string>
    <string name="dk_bd_platform">百度旗下移动娱乐平台</string>
    <string name="dk_login_duoku_title_text">多酷用户登录</string>
    <string name="dk_account_hint">请输入用户名/手机号</string>
    <string name="dk_account_bd_hint">邮箱地址/手机号/用户名</string>
    <string name="dk_prefecture_title">专区</string>
    <string name="dk_message_title">消息</string>
    <string name="dk_recommend_title">推荐</string>
    <string name="dk_customer_title">客服</string>
    <string name="dk_forum_title">论坛</string>
    <string name="dk_payment_notice">公告</string>
    <string name="dk_btn_string_pay">支付</string>
    <string name="dk_last_pay_mode">推荐支付方式</string>
    <string name="dk_other_pay_mode">其他支付方式</string>
    <string name="dk_select_kubi_pay_title">使用余额支付：%s</string>
    <string name="dk_select_kubi_pay_not_engouth">使用余额支付%s酷币,还需支付</string>
</resources>