<?xml version="1.0" encoding="utf-8"?>
<!-- The right region end int the same step start -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/dk_bg"
    android:orientation="vertical"
    android:paddingBottom="12dp">
    
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/dk_layout_payment_notice"
        android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
     	android:orientation="horizontal"
     	android:gravity="center_vertical"
     	android:layout_marginLeft="8dp"
     	android:layout_marginRight="12dp"
     	android:layout_marginBottom="4dp">
     	
     	<ImageView 
     	    android:id="@+id/dk_iv_payment_notice"
     	    android:layout_width="24dp"
			android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/dk_ic_announcement" />

     	<com.duoku.platform.view.common.DKMarqueeTextView
     	    android:id="@+id/dk_tv_payment_notice"
     	    android:layout_width="wrap_content"
     	    android:layout_height="wrap_content"
     	    android:gravity="center_vertical"
     	    android:layout_marginLeft="4dp"
     	    android:layout_marginRight="4dp"
     	    android:ellipsize="marquee" 
	        android:focusable="true" 
	        android:singleLine="true"
	        android:marqueeRepeatLimit="marquee_forever" 
	        android:focusableInTouchMode="true" 
	        android:scrollHorizontally="true"
     	    android:text="@string/dk_payment_notice"
     	    android:textColor="@color/dk_color_ff3300"
     	    android:textSize="@dimen/text_size_12_sp" />

     </LinearLayout>
     
    <LinearLayout 
        android:id="@+id/dk_layout_kubi_pay_not_engough"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center_vertical"
        android:layout_marginLeft="8dp"
     	android:layout_marginRight="11dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/dk_bg_kubi_no_engouth">
     	
        <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">
            
            <TextView 
	            android:id="@+id/dk_tv_kubi_pay_not_engouth"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="8dp"
	            android:layout_centerVertical="true"
	            android:textColor="@color/dk_color_666666"
	            android:textSize="@dimen/text_size_14_sp"
	            android:layout_toLeftOf="@+id/dk_ck_kubi_pay_not_engouth"
	            android:text="@string/dk_select_kubi_pay_not_engouth"/>

        	<CheckBox
	            android:id="@+id/dk_ck_kubi_pay_not_engouth"
	            android:layout_width="24dp"
	            android:layout_height="24dp"
	            android:layout_marginRight="4dp"
	            android:layout_marginLeft="4dp"
	            android:layout_alignParentRight="true"
	            android:layout_centerInParent="true"
	            android:checked="true"
	            android:button="@drawable/dk_payment_checkbox_kubi_selector" />
        </RelativeLayout>
    </LinearLayout>
    
    <LinearLayout 
        android:visibility="gone"
        android:id="@+id/dk_layout_kubi_pay_engough"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
     	android:layout_marginRight="11dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        	android:orientation="vertical"
        	android:gravity="center_vertical"
        	android:background="@drawable/dk_bg_kubi_engouth">
        	
        	<RelativeLayout 
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:layout_gravity="center_vertical"
            	android:layout_marginTop="8dp"
            	android:layout_marginBottom="8dp">
            	
            	<TextView 
	            	android:id="@+id/dk_tv_kubi_pay_engouth"
	            	android:layout_width="wrap_content"
	            	android:layout_height="wrap_content"
	            	android:layout_marginLeft="8dp"
	            	android:layout_centerVertical="true"
	            	android:textColor="@color/dk_color_666666"
	            	android:textSize="@dimen/text_size_14_sp"
	            	android:text="@string/dk_select_kubi_pay_title"/>
        	</RelativeLayout>
    	</LinearLayout>
    	
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            
            <Button
            	android:id="@+id/dk_btn_kubi_pay"
            	android:layout_width="fill_parent"
            	android:layout_height="36dp"
            	android:gravity="center"
            	android:textColor="#ffffff"
            	android:text="@string/dk_btn_string_pay"
            	android:textSize="@dimen/text_size_16_sp"
            	android:background="@drawable/dk_payment_btn_orange_selector"></Button>
        </LinearLayout>
    </LinearLayout>
     
    <LinearLayout 
        android:id="@+id/dk_layout_recommend_pay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="11dp">
            
            <TextView 
            	android:id="@+id/dk_tv_last_payment_method"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textColor="#333333"
            	android:textSize="@dimen/text_size_14_sp"
            	android:text="@string/dk_last_pay_mode"/>
            
            <RelativeLayout 
                android:id="@+id/dk_layout_fixed_other_pay_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/dk_payment_btn_other_selector">
                
                <TextView 
                    android:id="@+id/dk_tv_fixed_other_pay"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:textColor="#333333"
            		android:layout_marginRight="4dp"
            		android:layout_centerVertical="true"
            		android:textSize="@dimen/text_size_14_sp"
            		android:text="@string/dk_other_pay_mode"/>
                
                <ImageView 
                    android:id="@+id/dk_iv_fixed_other_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/dk_ic_other_pay_normal"
                    android:layout_toRightOf="@+id/dk_tv_fixed_other_pay" />
            </RelativeLayout>
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/dk_layout_recommend_list"
            android:layout_width="fill_parent"
         	android:layout_height="wrap_content"
         	android:orientation="horizontal"
         	android:layout_marginLeft="2dp"
        	android:layout_marginRight="4dp" >
         	
            <com.duoku.platform.view.common.DKGridViewExtend
                android:id="@+id/dk_grid_view_recommend"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:numColumns="3"  
                android:gravity="center"
    			android:columnWidth="60dp"
    			android:verticalSpacing="8dp" 
    			android:horizontalSpacing="8dp"
    			android:stretchMode="columnWidth">
                
            </com.duoku.platform.view.common.DKGridViewExtend>
     	</LinearLayout>
    </LinearLayout>
 
    <LinearLayout 
        android:id="@+id/dk_layout_select_other_pay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView 
            android:id="@+id/dk_tv_other_payment_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#333333"
            android:layout_marginLeft="8dp"
     		android:layout_marginRight="12dp"
            android:textSize="@dimen/text_size_14_sp"
            android:text="@string/dk_other_pay_mode"/>
        
        <LinearLayout
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical"
        	android:layout_marginLeft="2dp"
        	android:layout_marginRight="4dp">
        	
            <com.duoku.platform.view.common.DKGridViewExtend
                android:id="@+id/dk_grid_view_other"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:numColumns="3"  
                android:gravity="center"
    			android:columnWidth="60dp"
    			android:verticalSpacing="8dp" 
    			android:horizontalSpacing="8dp"
    			android:stretchMode="columnWidth" >
                
            </com.duoku.platform.view.common.DKGridViewExtend>
   		</LinearLayout>
    </LinearLayout>
</LinearLayout>
<!-- The right region end int the same step end -->